-Created the trustworthiness feature. - Added the code in backend to check for malware. - Added the code in the extension to call the backend to check if a website is blocked and act properly.

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -12,7 +12,9 @@
     "permissions": [
         "scripting",
         "webRequest",
-        "webNavigation"
+        "webNavigation",
+        "storage",
+        "activeTab"
     ],
     "host_permissions": [
         "http://*/*",
